--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,16 +42,16 @@
                         }
                         *@
 
-                        @if (User.IsInRole("Colaborator") || User.IsInRole("Admin"))
+                        @if (User.IsInRole("Colaborator") || User.IsInRole("Administrator"))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-success fw-bold" asp-controller="Products" asp-action="New">
+                                <a class="nav-link text-success fw-bold" asp-controller="Products" asp-action="Create">
                                     + Propune Produs
                                 </a>
                             </li>
                         }
 
-                        @if (User.IsInRole("Admin"))
+                        @if (User.IsInRole("Administrator"))
                         {
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-danger" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,15 +61,9 @@
                                     <li>
                                         <a class="dropdown-item" asp-controller="Categories" asp-action="Index">Gestionare Categorii</a>
                                     </li>
-                                    @*
                                     <li>
-                                        <a class="dropdown-item" asp-controller="Products" asp-action="PendingProducts">Aprobare Produse</a>
+                                        <a class="dropdown-item" asp-controller="Products" asp-action="PendingIndex">Aprobare Produse</a>
                                     </li>
-                                    <li><hr class="dropdown-divider"></li>
-                                    <li>
-                                        <a class="dropdown-item" asp-controller="Users" asp-action="Index">Gestionare Useri</a>
-                                    </li>
-                                    *@
                                 </ul>
                             </li>
                         }
